src/objects/Item_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Buy_Item_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Buy Item Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buy Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Buy_Item_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Free_Item_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Free Item Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Free_Item_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Discount_Type__c</fullName>
        <label>Item Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Discount_Value__c</fullName>
        <label>Item Discount Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Promotion id</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>BLN Item Promotions</relationshipLabel>
        <relationshipName>Item_Promotions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BLN Item Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Promotion__c</columns>
        <columns>Buy_Item__c</columns>
        <columns>Buy_Item_Quantity__c</columns>
        <columns>Item_Discount_Type__c</columns>
        <columns>Item_Discount_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IPromo-{000000}</displayFormat>
        <label>Item Promotion Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Item Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>